# CMake-Templates

./: .gitignore  LICENSE.md  README.md
console-project/: CMakeLists.txt
console-project/src/: main.c
sdl2-project/: CMakeLists.txt
sdl2-project/src/: CMakeLists.txt  main.c
